version=12.1.7_dev # new feature: Vasp reader shows enthalpy and Gibbs energy in model name